--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Law Offices of Linda Boadu esq. </title>
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../styles/index.css" />
 </head>
 
@@ -17,19 +17,18 @@
         <a class="nav__logo" href="#home">
             <image class="nav__logo--image" src="../images/lbl.png" alt="lbl law"></image>
         </a>
-        <ul class="nav__list">
-            <li class="nav__links">
-                <a class=" nav__link" href="#about">About</a>
-
-            </li>
-            <li class="nav__links">
-                <a class=" nav__link" href="#services">Services</a>
-            </li>
-            <li class="nav__links">
-                <a class=" nav__link" href="#contact">Contact</a>
-            </li>
+        <ul class="nav__menu">
+            <li><a class="nav__menuItem" href="#about">About</a></li>
+            <li ><a class="nav__menuItem" href="#services">Services</a></li>
+            <li ><a class="nav__menuItem" href="#contact">Contact</a></li>
+           
 
         </ul>
+        <button class="nav__hamburger">
+            <!-- material icons https://material.io/resources/icons/ -->
+            <i class="menuIcon material-icons">menu</i>
+            <i class="closeIcon material-icons">close</i>
+        </button>
     </nav>
     <!---Home-->
     <section  id="home" class="home">
@@ -132,7 +131,7 @@
 
     </footer>
 
-    <script src="../script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
